--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-body header {
+header {
   background-image: url("./images/eagle.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -12,7 +12,7 @@ body header {
   color: white;
 }
 
-body header nav:first-child {
+header nav:first-child {
   display: block;
   font-size: 0;
   margin: 0 auto 12vh auto;
@@ -20,7 +20,7 @@ body header nav:first-child {
   padding-top: 3vh;
 }
 
-body header nav:first-child .logo {
+header nav:first-child .logo {
   width: 45%;
   display: inline-block;
   font-family: "Montserrat", sans-serif;
@@ -28,18 +28,18 @@ body header nav:first-child .logo {
   font-size: 1.9vw;
 }
 
-body header nav:first-child a {
+header nav:first-child a {
   text-decoration: none;
   cursor: pointer;
   color: white;
 }
 
-body header nav:first-child ul {
+header nav:first-child ul {
   width: 52%;
   display: inline-block;
 }
 
-body header nav:first-child ul li {
+header nav:first-child ul li {
   display: inline-block;
   text-align: center;
   width: 14%;
@@ -48,27 +48,27 @@ body header nav:first-child ul li {
   cursor: pointer;
 }
 
-body header nav:first-child ul li:hover {
+header nav:first-child ul li:hover {
   color: #fce38a;
   -webkit-text-decoration: underline 2px solid #fce38a;
           text-decoration: underline 2px solid #fce38a;
   text-underline-offset: 1vh;
 }
 
-body header h2 {
+header h2 {
   font-family: "Kaushan Script", cursive;
   text-align: center;
   font-size: 3.75vw;
   margin-bottom: 4vh;
 }
 
-body header h1 {
+header h1 {
   font-size: 7.8vw;
   font-weight: bold;
   text-align: center;
 }
 
-body header .line {
+header .line {
   display: block;
   margin: auto;
   width: 3.125vw;
@@ -77,7 +77,7 @@ body header .line {
   margin-bottom: 5.1vh;
 }
 
-body header input {
+header input {
   background-color: #efc888;
   border: 2px solid #ffffff;
   color: #ffffff;
@@ -91,18 +91,18 @@ body header input {
   cursor: pointer;
 }
 
-body header input:hover {
+header input:hover {
   background-color: #fce38a;
 }
 
-body header nav:last-child {
+header nav:last-child {
   width: 70%;
   display: block;
   margin: auto;
   font-size: 0;
 }
 
-body header nav:last-child .second-row {
+header nav:last-child .second-row {
   display: inline-block;
   background: transparent;
   border-bottom: none;
@@ -117,32 +117,32 @@ body header nav:last-child .second-row {
   cursor: pointer;
 }
 
-body header nav:last-child .second-row h4 {
+header nav:last-child .second-row h4 {
   font-size: 0.9vw;
 }
 
-body header nav:last-child .second-row h4 span {
+header nav:last-child .second-row h4 span {
   font-size: 1.3vw;
   font-weight: bold;
 }
 
-body header nav:last-child .second-row:hover {
+header nav:last-child .second-row:hover {
   border-top: 2px solid #f38181;
   width: 14vw;
 }
 
-body .wrapper {
+.about {
+  text-align: center;
+  margin-top: 13.9vh;
+}
+
+.about .wrapper {
   width: 75%;
   display: block;
   margin: auto;
 }
 
-body .wrapper .about {
-  text-align: center;
-  margin-top: 13.9vh;
-}
-
-body .wrapper .about div img {
+.about .wrapper div img {
   display: inline-block;
   width: 20.2vw;
   height: 27.03vh;
@@ -151,32 +151,32 @@ body .wrapper .about div img {
   cursor: pointer;
 }
 
-body .wrapper .about div img:hover {
+.about .wrapper div img:hover {
   content: url("./images/super_team.png");
   -webkit-transform: scale(1.08);
           transform: scale(1.08);
 }
 
-body .wrapper .about h5 {
+.about .wrapper h5 {
   font-family: "Kaushan Script", cursive;
   font-size: 1.25vw;
 }
 
-body .wrapper .about h2 {
+.about .wrapper h2 {
   font-size: 1.56vw;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   line-height: 1.6;
 }
 
-body .wrapper .about .line-red {
+.about .wrapper .line-red {
   background-color: #f7adad;
   width: 4vw;
   height: 0.3vh;
   margin-top: 4.02vh;
 }
 
-body .wrapper .about p {
+.about .wrapper p {
   width: 52vw;
   font-family: "Roboto", sans-serif;
   font-size: 0.97vw;
@@ -188,7 +188,7 @@ body .wrapper .about p {
   margin-bottom: 8.98vh;
 }
 
-body .numbers {
+.numbers {
   display: block;
   background-color: #95e1d3;
   height: 28vh;
@@ -196,7 +196,7 @@ body .numbers {
   position: relative;
 }
 
-body .numbers .row {
+.numbers .row {
   display: block;
   width: 70%;
   font-size: 0;
@@ -207,7 +207,7 @@ body .numbers .row {
           transform: translate(-60%, -50%);
 }
 
-body .numbers .row .vertical {
+.numbers .row .vertical {
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -217,7 +217,7 @@ body .numbers .row .vertical {
   width: 1px;
 }
 
-body .numbers .row div {
+.numbers .row div {
   display: inline-block;
   color: white;
   width: 14%;
@@ -225,30 +225,36 @@ body .numbers .row div {
   padding: 0 1.6vw 0 1.6vw;
 }
 
-body .numbers .row div h6 {
+.numbers .row div h6 {
   font-family: "Montserrat", sans-serif;
   font-size: 3.75vw;
   font-weight: bold;
   margin-bottom: 3.1vh;
 }
 
-body .numbers .row div p {
+.numbers .row div p {
   font-size: 0.74vw;
   font-family: "Montserrat", sans-serif;
 }
 
-body .services {
+.services {
   text-align: center;
   margin-top: 11.5vh;
   margin-bottom: 11.5vh;
 }
 
-body .services h5 {
+.services .wrapper {
+  width: 75%;
+  display: block;
+  margin: auto;
+}
+
+.services .wrapper h5 {
   font-family: "Kaushan Script", cursive;
   font-size: 1.25vw;
 }
 
-body .services h2 {
+.services .wrapper h2 {
   font-size: 1.56vw;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
@@ -256,7 +262,7 @@ body .services h2 {
   margin: 1.1vh 0 4.2vh 0;
 }
 
-body .services .line-red {
+.services .wrapper .line-red {
   display: block;
   margin: auto;
   background-color: #f7adad;
@@ -266,12 +272,12 @@ body .services .line-red {
   margin-bottom: 6.8vh;
 }
 
-body .services div {
+.services .wrapper div {
   display: inline-block;
   text-align: left;
 }
 
-body .services div h3 {
+.services .wrapper div h3 {
   font-family: "Montserrat", sans-serif;
   font-size: 0.73vw;
   font-size: bold;
@@ -281,7 +287,7 @@ body .services div h3 {
   margin-left: 1vw;
 }
 
-body .services div p {
+.services .wrapper div p {
   font-family: "Roboto", sans-serif;
   font-size: 0.7vw;
   color: #999999;
@@ -291,7 +297,7 @@ body .services div p {
   width: 30vh;
 }
 
-body .services div .small-icon {
+.services .wrapper div .small-icon {
   display: inline-block;
   width: 1.7vw;
   height: 3.3vh;
@@ -301,14 +307,14 @@ body .services div .small-icon {
   vertical-align: top;
 }
 
-body .services .horizontal-line {
+.services .wrapper .horizontal-line {
   width: 85%;
   height: 1px;
   border-bottom: 1px solid #f2f2f2;
   margin-bottom: 2vh;
 }
 
-body .design {
+.design {
   background-image: url("./images/layer_mountains.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -319,26 +325,26 @@ body .design {
   margin-bottom: 12vh;
 }
 
-body .design h5 {
+.design h5 {
   font-family: "Kaushan Script", cursive;
   font-size: 1.25vw;
 }
 
-body .design h2 {
+.design h2 {
   font-size: 1.56vw;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   line-height: 1.6;
 }
 
-body .design .line-red {
+.design .line-red {
   background-color: #f7adad;
   width: 4vw;
   height: 0.3vh;
   margin-top: 4.02vh;
 }
 
-body .design .phones {
+.design .phones {
   position: absolute;
   top: 72.5%;
   left: 55%;
@@ -346,33 +352,33 @@ body .design .phones {
           transform: translate(-50%, -50%);
 }
 
-body .weDo {
+.weDo {
   height: 80vh;
   text-align: center;
   padding-top: 12vh;
   margin-bottom: 10vh;
 }
 
-body .weDo h5 {
+.weDo h5 {
   font-family: "Kaushan Script", cursive;
   font-size: 1.25vw;
 }
 
-body .weDo h2 {
+.weDo h2 {
   font-size: 1.56vw;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   line-height: 1.6;
 }
 
-body .weDo .line-red {
+.weDo .line-red {
   background-color: #f7adad;
   width: 4vw;
   height: 0.3vh;
   margin-top: 4.02vh;
 }
 
-body .weDo p {
+.weDo p {
   width: 52vw;
   font-family: "Roboto", sans-serif;
   font-size: 0.97vw;
@@ -384,39 +390,39 @@ body .weDo p {
   margin-bottom: 8.98vh;
 }
 
-body .weDo .creativity {
+.weDo .creativity {
   font-size: 0;
   height: 450px;
 }
 
-body .weDo .creativity .left {
+.weDo .creativity .left {
   display: inline-block;
   width: 40%;
   margin-right: 5%;
   vertical-align: top;
 }
 
-body .weDo .creativity .left img {
+.weDo .creativity .left img {
   width: 100%;
   height: 400px;
 }
 
-body .weDo .creativity .right {
+.weDo .creativity .right {
   display: inline-block;
   width: 45%;
   height: auto;
   position: relative;
 }
 
-body .weDo .creativity .right div {
+.weDo .creativity .right div {
   border: solid 1px #999999;
   font-size: 0;
   text-align: left;
 }
 
-body .weDo .creativity .right div a,
-body .weDo .creativity .right div h3,
-body .weDo .creativity .right div p {
+.weDo .creativity .right div a,
+.weDo .creativity .right div h3,
+.weDo .creativity .right div p {
   display: inline-block;
   color: #333333;
   font-size: 14px;
@@ -424,27 +430,27 @@ body .weDo .creativity .right div p {
   vertical-align: middle;
 }
 
-body .weDo .creativity .right div a:last-child {
+.weDo .creativity .right div a:last-child {
   position: absolute;
   right: 15px;
 }
 
-body .weDo .creativity .right div a:last-child {
+.weDo .creativity .right div a:last-child {
   -webkit-transform: translateY(15px);
           transform: translateY(15px);
 }
 
-body .weDo .creativity .right div a:nth-child(2) {
+.weDo .creativity .right div a:nth-child(2) {
   height: 14.5vh;
   -webkit-transform: translateY(0px);
           transform: translateY(0px);
 }
 
-body .weDo .creativity .right div:nth-child(2) {
+.weDo .creativity .right div:nth-child(2) {
   border-top: none;
 }
 
-body .weDo .creativity .right div:nth-child(2) p {
+.weDo .creativity .right div:nth-child(2) p {
   padding: 15px;
   font-style: italic;
   font-size: 15px;
@@ -452,30 +458,32 @@ body .weDo .creativity .right div:nth-child(2) p {
   width: 29vw;
   margin-bottom: 0;
   margin-top: 0;
+  height: 132px;
+  overflow: hidden;
 }
 
-body .weDo .creativity .right div:nth-child(3) {
+.weDo .creativity .right div:nth-child(3) {
   margin: 12px 0 12px 0;
 }
 
-body .slides {
+.slides {
   background-color: #f8f8f8;
   height: 33vh;
   margin-bottom: 12vh;
 }
 
-body .slides .wrapper {
+.slides .wrapper {
   -webkit-transform: translateY(50%);
           transform: translateY(50%);
   text-align: center;
   position: relative;
 }
 
-body .slides .center > div {
+.slides .center > div {
   display: inline-block;
 }
 
-body .slides .center > div p {
+.slides .center > div p {
   font-family: "Roboto", sans-serif;
   font-style: italic;
   font-weight: lighter;
@@ -488,7 +496,7 @@ body .slides .center > div p {
   vertical-align: top;
 }
 
-body .slides .center > div .line-red {
+.slides .center > div .line-red {
   display: inline-block;
   background-color: #f7adad;
   width: 3.1vw;
@@ -497,28 +505,28 @@ body .slides .center > div .line-red {
   margin-right: 0.52vw;
 }
 
-body .slides .center > div h5 {
+.slides .center > div h5 {
   display: inline-block;
   font-family: "Kaushan Script", cursive;
   font-size: 1.25vw;
 }
 
-body .slides .chat-border {
+.slides .chat-border {
   border: 3px solid #95e1d3;
   padding: 45px;
 }
 
-body .slides .first {
+.slides .first {
   text-align: left;
   margin-left: 3.3vw;
 }
 
-body .slides .first img {
+.slides .first img {
   margin-right: 5px;
   margin-bottom: 5px;
 }
 
-body .slides div#left-arrow {
+.slides div#left-arrow {
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
   position: absolute;
@@ -526,11 +534,127 @@ body .slides div#left-arrow {
   top: 50%;
 }
 
-body .slides div#right-arrow {
+.slides div#right-arrow {
   -webkit-transform: rotate(270deg);
           transform: rotate(270deg);
   position: absolute;
   right: 10%;
   top: 50%;
+}
+
+.ourTeam {
+  text-align: center;
+}
+
+.ourTeam h5 {
+  font-family: "Kaushan Script", cursive;
+  font-size: 1.25vw;
+}
+
+.ourTeam h2 {
+  font-size: 1.56vw;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  line-height: 1.6;
+}
+
+.ourTeam .line-red {
+  background-color: #f7adad;
+  width: 4vw;
+  height: 0.3vh;
+  margin-top: 4.02vh;
+}
+
+.ourTeam p {
+  width: 52vw;
+  font-family: "Roboto", sans-serif;
+  font-size: 0.97vw;
+  color: #999999;
+  display: block;
+  margin: auto;
+  line-height: 1.6;
+  margin-top: 3.72vh;
+  margin-bottom: 8.98vh;
+}
+
+.ourTeam .member {
+  display: inline-block;
+  width: 30%;
+}
+
+.ourTeam .member h3 {
+  margin-top: 27px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  color: #333333;
+  letter-spacing: 1px;
+}
+
+.ourTeam .member p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  font-weight: lighter;
+  font-style: italic;
+  margin-top: 10px;
+  width: 150px;
+}
+
+.ourTeam .member img {
+  cursor: pointer;
+}
+
+.ourTeam .member img:hover {
+  content: url("./images/Rectangle-4.png");
+  -webkit-transform: scale(1.08);
+          transform: scale(1.08);
+}
+
+.logos {
+  height: 251px;
+  background: #f8f8f8;
+  margin-bottom: 12vh;
+}
+
+.logos img {
+  display: block;
+  margin: auto;
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
+}
+
+.ourWorks {
+  height: 750px;
+  text-align: center;
+}
+
+.ourWorks h5 {
+  font-family: "Kaushan Script", cursive;
+  font-size: 1.25vw;
+}
+
+.ourWorks h2 {
+  font-size: 1.56vw;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  line-height: 1.6;
+}
+
+.ourWorks .line-red {
+  background-color: #f7adad;
+  width: 4vw;
+  height: 0.3vh;
+  margin-top: 4.02vh;
+}
+
+.ourWorks p {
+  width: 52vw;
+  font-family: "Roboto", sans-serif;
+  font-size: 0.97vw;
+  color: #999999;
+  display: block;
+  margin: auto;
+  line-height: 1.6;
+  margin-top: 3.72vh;
+  margin-bottom: 8.98vh;
 }
 /*# sourceMappingURL=style.css.map */
