--- a/style.scss
+++ b/style.scss
@@ -323,16 +323,17 @@ header {
   background-image: url("./images/layer_mountains.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
   height: 80vh;
   text-align: center;
   padding-top: 12vh;
   margin-bottom: 12vh;
+  
 
   .wrapper {
     width: 75%;
     display: block;
     margin: auto;
+   
 
   h5 {
     font-family: "Kaushan Script", cursive;
@@ -351,13 +352,13 @@ header {
     width: 4vw;
     height: 0.3vh;
     margin-top: 4.02vh;
-  }
+    }
 
-  .phones {
-    position: absoute;
-    top: 72.5%;
-    left: 55%;
-    transform: translate(-50%, -50%);
+  div img{
+    display: block;
+    margin: auto;
+    margin-top: 53px;
+   
   }
 }
 }
@@ -485,7 +486,6 @@ header {
   background-color: #f8f8f8;
   height: 33vh;
   margin-bottom: 12vh;
-  // transform: translateY(50%);
   text-align: center;
   position: relative;
 
@@ -669,6 +669,12 @@ header {
   background: #f8f8f8;
   margin-bottom: 12vh;
 
+  .wrapper {
+    width: 75%;
+    display: block;
+    margin: auto;
+  }
+
   img {
     display: block;
     margin: auto;
@@ -677,8 +683,13 @@ header {
 }
 
 .ourWorks {
-  height: 750px;
+  height: auto;
   text-align: center;
+
+  .wrapper{
+    width: 75%;
+    display: block;
+    margin: auto;
 
   h5 {
     font-family: "Kaushan Script", cursive;
@@ -710,4 +721,107 @@ header {
     margin-top: 3.72vh;
     margin-bottom: 8.98vh;
   }
+}
+}
+
+.wallpaper {
+  font-size: 0;
+  margin-bottom: 90px;
+
+  >div {
+    display: inline-block;
+    width: 25%;
+
+    >a {
+      background-repeat: no-repeat;
+      background-size: cover;
+      display: block;
+      width: 100%;
+      padding-top: 81%;
+      height: 0;
+      position: relative;
+
+      >img {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
+}
+  }
+
+  .first {
+    :first-child {
+      background-image: url("images/surf.jpg");
+
+      &:hover {
+        background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%), url('images/surf.jpg');
+      }
+      &:hover div {
+        display: block;
+      }
+    }
+
+    :last-child {
+      background-image: url("images/bridge.jpg");
+
+      &:hover {
+        background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%), url("images/bridge.jpg");
+      }
+    }
+  }
+
+  .second {
+    :first-child {
+      background-image: url("images/architecture.jpg");
+
+      &:hover {
+        background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%),
+          url("images/architecture.jpg");
+      }
+    }
+    :last-child {
+      background-image: url("images/architecture_2.jpg");
+
+      &:hover {
+        background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%),
+          url("images/architecture_2.jpg");
+      }
+    }
+  }
+
+  .third {
+    >a {
+      background-image: url("images/sea.jpg");
+      padding-top: 162%;
+
+      &:hover {
+        background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%),
+          url("images/sea.jpg");
+
+      }
+    }
+  }
+
+  .fourth {
+    :first-child {
+      background-image: url("images/architecture_3.jpg");
+
+      &:hover {
+        background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%),
+          url("images/architecture_3.jpg");
+      }
+    }
+
+    :last-child {
+      background-image: url("images/arcitecture_4.jpg");
+
+      &:hover {
+        background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%),
+          url("images/arcitecture_4.jpg");
+      }
+    }
+  }
+
+
 }
